# website

./: .gitignore  pyproject.toml  requirements.dev.txt  requirements.txt
assets/css/: styles.css
assets/js/: dev-reloader.js
pages/: index.md
pages/blog/: index.md
pages/blog/this_site/: index.md
templates/: base.html  blog_index.html
