[project]
name = "website"
version = "0.1.0"
description = "Add your description here"
requires-python = ">=3.13"
dependencies = [
    "click==8.1.8",
    "jinja2==3.1.6",
    "mistune==3.1.2",
    "pygments==2.19.1",
]

[dependency-groups]
dev = [
    "watchfiles==1.0.4",
]

[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"

[tool.setuptools]
packages = []
